more fixes to get production deployments working

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,9 @@ OPENAI_API_KEY=sk-...
 # SHOPIFY_STORE_PASSWORD=
 
 # --- Production (e.g. Railway) ---
-# Set these in your host's dashboard; NODE_ENV is usually set automatically.
+# Set these in your host's dashboard; NODE_ENV and PORT are usually set automatically.
 # Required: APP_URL (public app URL), SESSION_SECRET, DATABASE_URL, SHOPIFY_API_KEY, SHOPIFY_API_SECRET
-# Optional: OPENAI_API_KEY. PORT is read if provided.
+# Optional: OPENAI_API_KEY.
+#
+# Railway 502 fix: In Service → Settings → Networking (or Domains), set the domain's
+# "Target port" to 8080 (or leave unset so it uses PORT). The app listens on PORT (8080).
