--- a/.env.example
+++ b/.env.example
@@ -26,9 +26,7 @@ OPENAI_API_KEY=sk-...
 # SHOPIFY_STORE_PASSWORD=
 
 # --- Production (e.g. Railway) ---
-# Set these in your host's dashboard; NODE_ENV and PORT are usually set automatically.
-# Required: APP_URL (public app URL), SESSION_SECRET, DATABASE_URL, SHOPIFY_API_KEY, SHOPIFY_API_SECRET
-# Optional: OPENAI_API_KEY.
+# Required: APP_URL, SESSION_SECRET, DATABASE_URL, SHOPIFY_API_KEY, SHOPIFY_API_SECRET
+# Optional: OPENAI_API_KEY. NODE_ENV and PORT are set by Railway.
 #
-# Railway 502 fix: In Service → Settings → Networking (or Domains), set the domain's
-# "Target port" to 8080 (or leave unset so it uses PORT). The app listens on PORT (8080).
+# If you get 502: set the domain's "Target port" to 8080 (Service → Settings → Domains).
